# map-builder-3d

./: .gitignore  Cargo.toml  README.md  win_cargo_docs.bat
benches/: collision_bench.rs
src/: collision.rs  collision_obstacle.rs  collision_system.rs  collision_walking.rs  lib.rs  main.rs  rapier_mesh_bundles.rs
src/controller/: fps_controller.rs  mod.rs
