[package]
name = "map_builder_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", features = [
    "bevy_render",
    "bevy_pbr",
] } # TODO: Which of these do we actually need for this project?
# bevy = { version = "0.9", features = ["dynamic"] }
serde = "1.0"
ncollide3d = { version = "0.33", features = ["dim3", "serde-serialize"] }
# ncollide3d = "0.33"

# [dev-dependencies]
criterion = "0.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "collision_bench"
harness = false
