[package]
name = "map_builder_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
bevy_rapier3d = { version = "0.20", features = ["debug-render"] }

# [dev-dependencies]
criterion = "0.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Improve package performance in debug builds
[profile.dev.package."*"]
opt-level = 3

# Rapier recommends using this to improve performance in release builds
[profile.release]
codegen-units = 1

# [[bench]]
# name = "collision_bench"
# harness = false
